--- a/package.json
+++ b/package.json
@@ -13,33 +13,59 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.15.16",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "@walletconnect/client": "^1.7.1",
+    "@walletconnect/react-native-dapp": "^1.7.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
+    "expo-camera": "~12.1.0",
     "expo-constants": "~13.0.0",
     "expo-font": "~10.0.4",
+    "expo-image-manipulator": "~10.2.0",
+    "expo-image-picker": "~12.0.1",
     "expo-linking": "~3.0.0",
+    "expo-notifications": "~0.14.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
+    "firebase": "^9.6.1",
+    "infrabrik-react-native-ui": "^1.0.5",
+    "list-content-ballza95": "^1.0.0",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "rn-nodeify": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-typescript": "^7.16.5",
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.38",
     "@types/react-native": "^0.66.9",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
